apps/talos-home/actual-budget/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual-budget
  labels:
    kubernetes.io/metadata.name: actual-budget
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
